# chip-8-rust

./: .gitignore  Cargo.toml
benches/vm/: decode.rs
src/: io.rs  lib.rs  main.rs  screen.rs  system.rs  vm.rs
