[package]
name = "chip-8-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rodio = "0.17.1"
sdl2 = "0.35.2"
ticktock = "0.8.0"

[profile.dev]
overflow-checks = false

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "vm-decode"
harness = false
path = "benches/vm/decode.rs"
